<resources>
    <string name="app_name">GoShoppi POS</string>
    <string name="load_msg_1">Loading</string>
    <string name="load_msg_2">Please wait</string>
    <string name="security_permission_title">Security Permissions</string>
    <string name="camera_settings_message">Camera permission allows us to access device camera. Please allow in App
        Settings for additional functionality.
    </string>
    <string name="search_data">Search data</string>
    <string name="pin_code">Pin Code</string>
    <string name="product_name">Product Name :</string>
    <string name="added_date">Added</string>
    <string name="product_stock">Stock</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure to remove product from local inventory?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="inventory">Inventory</string>
    <string name="product_price">Price</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="bg_city">bg_city</string>
    <string name="logo">logo</string>
    <string name="store_code">Store Code</string>
    <string name="user_code">User Code</string>
    <string name="pass_code">Pass Code</string>
    <string name="user_name">User Name</string>
    <string name="action_settings">Settings</string>
    <string name="set">Set</string>
    <string name="clear">Clear</string>
    <string name="search_product">Search product</string>
    <string name="scan_bar_code">Scan product</string>
    <string name="add_to_inventory">Add Products to inventory</string>
    <string name="account_price">Account Price</string>
    <string name="discount">Discount:</string>
    <string name="current_stock">Current Stock</string>
    <string name="order_limit">Order Limit</string>
    <string name="bar_code">Bar Code</string>
    <string name="products">Products</string>
    <string name="variants">Variants</string>
    <string name="weights">Weights</string>
    <string name="remove_item">Remove</string>
    <string name="return_item">Return</string>
    <string name="pref_color_label">App Theme Color</string>
    <string name="pref_color_label_default">Default</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>
    <string name="pref_app_theme_color_key" translatable="false">AppThemeColor</string>
    <string name="pref_color_default_value" translatable="false">default</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="name">Name</string>
    <string name="qty">Qty</string>
    <string name="each_price">Each \n (AED)</string>
    <string name="total_price">Total \n(AED)</string>
    <string name="price_zero_aed">0.00 AED</string>
    <string name="sub_total">Sub Total:</string>
    <string name="total">Total:</string>
    <string name="balance_due">Balance Due:</string>
    <string name="customer_detail">Customer Name and Contact Number</string>
    <string name="hold_order">Hold Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="in_store">In Store</string>
    <string name="discount_order">Discount Order</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="user_details">User Details</string>
    <string name="customer_mbl">Customer Mobile</string>
    <string name="alternative_number">Customer Alternative Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_gstn">Customer GSTIN</string>
    <string name="count">Count</string>
    <string name="customer_address">Customer Address</string>
    <string name="create">Create</string>
    <string name="err_not_empty">This filed could not be empty</string>
    <string name="err_category">Please Select Category</string>
    <string name="err_invalid_email">Please enter correct Email Address</string>
    <string name="err_invalid_entry">Invalid entry</string>
    <string name="err_mobile">Invalid mobile number</string>
    <string name="err_phone">Invalid Phone number</string>
    <string name="phone">Phone number</string>
    <string name="out_standing_amount">Outstanding Amount</string>
    <string name="out_stock">Out of stock</string>
    <string name="permission">Permissions</string>
    <string name="add_user">Add user</string>
    <string name="admin">Admin</string>
    <string name="procurement">Procurement</string>
    <string name="sales">Sales</string>
    <string name="progress_dialog_desc">Processing</string>
    <string name="progress_dialog_title">Pelase Wait</string>
    <string name="download_excel_file">Download Excel File</string>
    <string name="upload_excel_file">Upload Excel File</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cash_payment">Cash payment</string>
    <string name="order_number">Order Number</string>
    <string name="amout">Amount</string>
    <string name="date">Date</string>
    <string name="no_order_found">No order found</string>
    <string name="email_admin">admin@sb.com</string>
    <string name="email">Email</string>
    <string name="pass_admin">welcome</string>
    <string name="credit">Credit</string>
    <string name="credit_amount">Credit Amount</string>
    <string name="payment_status">Payment Status</string>
    <string name="status">Status</string>
    <string name="bills">Bills</string>
    <string name="order">Orders</string>
    <string name="total_customer">Total Customer</string>
    <string name="debt">Debt</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="total_credit">Total Credit</string>
    <string name="no_transaction">No transaction Found</string>
    <string name="daily">Daily</string>
    <string name="this_month">This Month</string>
    <string name="filter">Filter</string>
    <string name="quantity">Quantity</string>
    <string name="total_amount">Total Amount</string>
    <string name="net_amout">Net Amout</string>
    <string name="cash">Cash</string>
    <string name="wallet">Wallet</string>
    <string name="total_paid">Total Paid</string>
    <string name="zero_aed">0.00 AED</string>
    <string name="device_setting">Device Settings</string>
    <string name="other">Other</string>
    <string name="view_details">View Details</string>
    <string name="price">Price</string>
    <string name="gross_amount">Gross Amount</string>
    <string name="gst">GST</string>
    <string name="net_amount">Net Amount</string>
    <string name="receive_inventory">Receive Inventory</string>
    <string name="proceed">Proceed</string>
    <string name="please_enter_details">Please Enter Details</string>
    <string name="cusi" />
    <string name="distributor_details">Enter name for distributor details</string>
    <string name="customer_details">Enter Customer phone number for suggestions</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="alt_mbl">Alternative \n Number</string>
    <string name="total_distributor">Total Distributor</string>
    <string name="total_discount">Total Discount</string>
    <string name="device_i">Device Id</string>
    <string name="user_access">User Access</string>
    <string name="update_distributor_detail">Update Distributor Detail</string>
    <string name="update_customer_detail">Update Customer Detail</string>
    <string name="no_value">N/A</string>
    <string name="no_data">No data found</string>
    <string name="non_registered">NON REGISTERED</string>
    <string name="non_text">xxxxxx</string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="range">Range</string>
    <string name="update">Update</string>
    <string name="users">Users</string>
    <string name="add_weighted_products">Add Weighted Products</string>
    <string name="product_details">Product Details</string>
    <string name="varaint_details">Varaint Details</string>
    <string name="product_description">Product Description</string>
    <string name="category">Category</string>
    <string name="offer_price">Offer Price</string>
    <string name="unit_name">Unit Name</string>
    <string name="stock_balance">Stock Balance</string>
    <string name="no_variant">No variant added</string>
    <string name="save">Save</string>
    <string name="weighted_products">Weighted Products</string>
    <string name="subcategory">Subcategory</string>
    <string name="show_inventory">Show Inventory</string>
    <string name="enter_qty">Enter quantity</string>
    <string name="payment_made">Payment Made</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="order_amount">Order Amount</string>
    <string name="pending_amount">Pending Amount</string>
    <string name="show_payment">Show Payment</string>
    <string name="dash_sign">-</string>
    <string name="due">Due</string>
    <string name="purchase_order_details">Purchase Order Details</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="hold">Hold</string>
    <string name="pay">Pay</string>
    <string name="surcharge">Surcharge:</string>
    <string name="tax">Tax:</string>
    <string name="existing_customers">Search Existing Customers</string>
    <string name="add_customer">Add Customer</string>
    <string name="customers">Customers</string>
    <string name="change">Change</string>
    <string name="tendered">Amount Tendered</string>
    <string name="duue">Balance Due</string>
    <string name="back">Back</string>
    <string-array name="payment_type">
        <item>Cash</item>
        <item>Cheque</item>
    </string-array>
    <string-array name="unitName">
        <item>Kilograms</item>
        <item>Grams</item>
    </string-array>
    <string-array name="locations_array">
        <item>UAE</item>
        <item>Australia</item>
        <item>India</item>
        <item>USA</item>
        <item>Netherland</item>
        <item>New Zealand</item>
        <item>UK</item>
        <item>Bahrain</item>
    </string-array>
    <string-array name="locations_array_values">
        <item>goshoppiae777</item>
        <item>goshoppiau777</item>
        <item>goshoppi777</item>
        <item>goshoppius777</item>
        <item>goshoppinl777</item>
        <item>goshoppinz777</item>
        <item>goshoppiuk777</item>
        <item>goshoppiuk777</item>
    </string-array>
    <string name="mrp">MRP</string>
    <string name="pp">PP</string>
    <string name="distributor">Distributor</string>
    <string name="remind">Remind</string>
    <string name="dashboard">Dashboard</string>
    <string name="customer_dashboard">Customer Dashboard</string>
    <string name="distributor_dashboard">Distributor Dashboard</string>
    <string name="logout">Logout</string>
    <string name="si_no">Sl No.</string>
    <string name="category_name">Category Name</string>
    <string name="category_status">Category Status</string>
    <string name="action">Action</string>
</resources>