<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
            android:id="@+id/adminDashboard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/dashboard"
 />
    <item
            android:id="@+id/inventory_prod"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/inventory" />

    <item
            android:id="@+id/customerDashboard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/customer_dashboard" />
    <item
            android:id="@+id/distributorDashboard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/distributor_dashboard" />

    <item

            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/logout" />

</menu>