<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="5"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:textSize="14sp"
            android:textColor="#000"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:id="@+id/tvId"
            android:layout_height="match_parent"
            android:gravity="center_vertical" android:layout_weight="1"
            android:text="@string/si_no"
            android:textAlignment="center"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:id="@+id/tvSubcategory"
            android:gravity="center_vertical"
            android:text="@string/subcategory"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:id="@+id/tvCategoryName"
            android:gravity="center_vertical"
            android:text="@string/category_name"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />


    <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/category_status"
            android:id="@+id/tvCategoryStatus"

            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/action"
            android:id="@+id/tvAction"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold" />

</LinearLayout>
