<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_2dp"
        android:weightSum="3">

    <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/distributor"
            android:textColor="@color/white"

            android:textSize="14sp" />

    <TextView
            android:id="@+id/tvDue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/due"
            android:textColor="@color/white"
            android:textSize="14sp" />

    <Button
            android:id="@+id/btnRemind"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_bordered"
            android:gravity="center"
            android:text="@string/remind"
            android:textColor="@color/light_blue_shade"
            android:textSize="12sp" />
</LinearLayout>