<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.settings.DeviceSettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_i"
            android:id="@+id/textView26"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp" app:layout_constraintTop_toBottomOf="@+id/textView27"
            android:layout_marginTop="32dp" android:layout_marginStart="32dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="14"
            android:id="@+id/edDeviceId"
            app:layout_constraintBottom_toBottomOf="@+id/textView26"
            app:layout_constraintTop_toTopOf="@+id/textView26" app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintVertical_bias="0.51"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintEnd_toStartOf="@+id/btnUpdate"/>
    <TextView
            android:text="@string/device_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView27" android:textSize="24sp"
            android:textStyle="bold" android:textAllCaps="false" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/store_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView31" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView26" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:textSize="20sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:id="@+id/edStoreCode"
            app:layout_constraintEnd_toEndOf="@+id/edDeviceId" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/edDeviceId" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edDeviceId"
            app:layout_constraintBottom_toBottomOf="@+id/textView31"/>
    <View android:layout_width="match_parent"
          android:background="#971A237E"
          android:layout_margin="@dimen/margin_24dp"
          android:layout_height="1dp"
          android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/textView31"
          tools:layout_editor_absoluteX="24dp" android:id="@+id/view2"/>

    <TextView
            android:text="@string/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView32"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp" android:textSize="24sp"
            android:textStyle="bold" android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/view2"/>
    <TextView
            android:text="@string/user_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView33" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView32" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:textSize="18sp" android:textAllCaps="false"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserCode"
            app:layout_constraintBottom_toBottomOf="@+id/textView33"
            app:layout_constraintTop_toTopOf="@+id/textView33" app:layout_constraintStart_toEndOf="@+id/textView33"
            android:layout_marginStart="28dp" app:layout_constraintVertical_bias="0.41000003"
            android:textStyle="bold" android:textAllCaps="true"/>

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"

                  android:id="@+id/constraintsecond" android:layout_marginEnd="8dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintTop_toBottomOf="@+id/textView33"
                  android:layout_marginTop="16dp">


        <TextView
                android:id="@+id/tv_varaint_prd_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="32dp"
                android:textSize="@dimen/text_18"/>
        <CheckBox
                android:text="@string/admin"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginLeft="32dp"
                android:id="@+id/cbAdmin"/>
        <CheckBox
                android:text="@string/procurement"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_20dp"
                android:layout_marginLeft="32dp"

                android:id="@+id/cbProc"/>
        <CheckBox
                android:text="@string/sales"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:layout_marginStart="32dp"

                android:id="@+id/cbSales"/>


    </LinearLayout>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@+id/edDeviceId"
            app:layout_constraintBottom_toBottomOf="@+id/edDeviceId" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdateAccess" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.993" app:layout_constraintTop_toBottomOf="@+id/constraintsecond"
            android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>