<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/seller_table_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="4">

        <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/order_number"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAlignment="center"
                android:id="@+id/tvDate"/>

        <TextView
                android:textSize="14sp"
                android:textColor="#000"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/amout" android:textAlignment="center" android:id="@+id/tvAmount"/>


     <TextView
                android:textSize="14sp"
                android:textColor="#000"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/payment_status"
                android:textAlignment="center"
                android:id="@+id/tvPaymentStatus"/>

    </LinearLayout>

    <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#34000000"/>

</LinearLayout>
